acloudguru/kubernetes/always-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: always-pod
  labels:
    name:  always-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 10']
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: Always
