acloudguru/kubernetes/big-request-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: big-request-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    resources:
      limits:
        memory: "200Mi"
        cpu: "250m"
      requests:
        memory: "128Mi"
        cpu: "10000m"
