acloudguru/kubernetes/dnstest-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-dnstest
  labels:
    name: busybox-dnstest
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-dnstest
  labels:
    name: nginx-dnstest
spec:
  containers:
  - name: nginx
    image: nginx:1.19.2
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
