acloudguru/kubernetes/liveness-proble-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 3600; done']
    livenessProbe:
      exec: 
        command: ['echo', 'Hello, World!']
      initialDelaySeconds: 5
      periodSeconds: 5
