acloudguru/kubernetes/multicontainer-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer-pod
  labels:
    name: multicontainer-pod
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: redis
    image: redis
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: couchbase
    image: couchbase
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
