acloudguru/kubernetes/my-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-new
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-deployment-new
  template:
    metadata:
      labels:
        app: my-deployment-new
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        ports:
        - containerPort: 80
