acloudguru/kubernetes/nodeselector-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodeselector-pod
  labels:
    name: nodeselector-pod
spec:
  nodeSelector:
    special: "true"
  containers:
  - name: nginx
    image: nginx:1.19.1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
