acloudguru/kubernetes/onfailure-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: onfailure-pod
  labels:
    name:  onfailure-pod
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 10']
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: OnFailure
