acloudguru/kubernetes/pod-svc-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-svc-test
  labels:
    name: pod-svc-test
spec:
  containers:
  - name: pod-svc-test
    image: radial/busyboxplus:curl
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    command: ['sh', '-c', 'while true; do sleep 10; done']
