acloudguru/kubernetes/pv-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
  labels:
    name: pv-pod
spec:
  restartPolicy: Never
  containers:
  - name: busybox
    image: busybox
    command: ['sh','-c', 'echo Success! > /output/success.txt']
    volumeMounts:
      - mountPath: /output
        name: pv-storage
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
          claimName: my-pvc
