acloudguru/kubernetes/rediness-probe-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    readinessProbe:
      httpGet:
        path: /
        port: 80 
      failureThreshold: 5
      periodSeconds: 5
