acloudguru/kubernetes/startup-probe-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: startup-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.19.1
    startupProbe:
      httpGet:
        path: /
        port: 80 
      failureThreshold: 30
      periodSeconds: 10
