acloudguru/kubernetes/volume-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec: 
  restartPolicy: Never
  containers: 
  - name: busybox
    image: busybox
    command: ['sh','-c', 'echo Success! > /output/success.txt']
    volumeMounts:
      - mountPath: /output
        name: my-volume
  volumes:
    - name: my-volume
      hostPath:
          path: /Users/user/data
