acloudguru/kubernetes/volume-shared-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-shared-pod
spec: 
  restartPolicy: Never
  containers: 
  - name: busybox1
    image: busybox
    command: ['sh','-c', 'while true; do echo Success! > /output/output.txt; sleep 5; done']
    volumeMounts:
      - mountPath: /output
        name: my-volume
  - name: busybox2
    image: busybox
    command: ['sh','-c', 'while true; do cat /input/output.txt; sleep 5; done']
    volumeMounts:
      - mountPath: /input
        name: my-volume
  volumes:
    - name: my-volume
      emptyDir: {}
