acloudguru/kubernetes/svc-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: svc-example
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
